--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "author": "John ahn",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.18.3",
+    "browserslist": "^4.16.6",
+    "caniuse-lite": "^1.0.30001231",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
+    "dependency": "^0.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
@@ -30,7 +33,7 @@
     "supports-color": "^7.1.0"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0",
+    "concurrently": "^6.2.0",
     "nodemon": "^1.19.1"
   }
 }
